--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ ul {
 .gallery {
     display: grid;
     grid-template-columns: repeat(5, 1fr); 
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     gap: 30px;
 
 }
